compiled to jar file

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,9 @@
 <html>
     <head></head>
     <body>
-        <h1>Welcome to Spring Boot!</h1>
+        <h1>Printing is fun!</h1>
+        <h1>Java > Python</h1>
+        <h1>This is packaged in a jar file</h1>
+        <h1>use java -jar file_name to run</h1>
     </body>
 </html>
