--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
     <head></head>
     <body>
-        <h1>Printing is fun!</h1>
+        <h1>Hello Test</h1>
         <h1>Java > Python</h1>
         <h1>This is packaged in a jar file</h1>
         <h1>use java -jar file_name to run</h1>
