--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,21 @@
 <html>
     <head></head>
     <body>
-        <h1>Hello Test</h1>
-        <h1>Java > Python</h1>
-        <h1>This is packaged in a jar file</h1>
-        <h1>use java -jar file_name to run</h1>
+        <div>
+            <h1>
+                Da Vinci Artwork
+            </h1>
+            <div class="photo-container">
+                <div>
+                    <img src="./images/mona-lisa.jpeg" width="500px">
+                    <p>The Mona Lisa is a half-length portrait painting by Italian artist Leonardo da Vinci.</p>
+                </div>
+                <div>
+                    <img src="./images/salvator-mundi.jpeg" width="500px">
+                    <p> The Salvator Mundi was painted for King Louis XII of France.</p>
+                </div>
+
+            </div>
+        </div>
     </body>
 </html>
